<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragment.main.MainFragment">

    <TextView
        android:id="@+id/main_fr_quiz_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_fr_image_view"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_ar_tut"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_fr_quiz_tv" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="@dimen/textview_width"
        android:layout_marginStart="@dimen/marginRight"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/questions_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_fr_image_view"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="241dp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/main_fr_seekBar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:progressBackgroundTint="#BE52F2"
        android:progressTint="#BE52F2"
        android:thumbTint="#BE52F2"
        android:thumb="@drawable/thumb"
        android:secondaryProgressTintMode="multiply"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="@dimen/textview_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/marginRight"
        android:text="@string/category"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_fr_seekBar" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/main_category_spinner"
        android:layout_width="300dp"
        android:layout_marginTop="5dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="@dimen/textview_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginRight"
        android:text="@string/difficulty"
        android:layout_marginTop="30dp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_category_spinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/main_difficulty_spinner"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3" />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/main_difficulty_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/bg_btn_start"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="37dp"
        android:layout_height="20dp"
        android:text="@string/_10"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/main_fr_seekBar"
        app:layout_constraintStart_toEndOf="@+id/text1" />


</androidx.constraintlayout.widget.ConstraintLayout>